--- a/views/screen.pug
+++ b/views/screen.pug
@@ -4,6 +4,6 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="styles.css")
-        title Document
+        title lay
     body
-        h1 hi
+        .lay
