--- a/views/screen.pug
+++ b/views/screen.pug
@@ -7,3 +7,10 @@ html(lang="en")
         title lay
     body
         .lay
+
+            .lay__top 
+            .lay__main main
+            .lay__col1
+                .lay__col1 col1
+                .lay__col2 col2
+                .lay__col3 col3
