--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -5,5 +5,15 @@
   height: 100vh;
 
   display: flex;
+  flex-direction: column;
+}
+
+.lay .lay__top {
+  width: 100%;
+  height: 10%;
+
+  display: flex;
   flex-direction: row;
+
+  background-color: aqua;
 }
