--- a/views/screen.pug
+++ b/views/screen.pug
@@ -9,8 +9,10 @@ html(lang="en")
         .lay
 
             .lay__top 
-            .lay__main main
-            .lay__col1
+
+            .lay__main 
+
+            .lay__col
                 .lay__col1 col1
                 .lay__col2 col2
                 .lay__col3 col3
