--- a/views/screen.pug
+++ b/views/screen.pug
@@ -13,6 +13,6 @@ html(lang="en")
             .lay__main 
 
             .lay__col
-                .lay__col1 col1
-                .lay__col2 col2
-                .lay__col3 col3
+                .lay__col1 
+                .lay__col2 
+                .lay__col3 
