--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -15,14 +15,14 @@
   display: flex;
   flex-direction: row;
 
-  background-color: aqua;
+  background-color: #48dbfb;
 }
 
 .lay .lay__main {
   width: 100%;
   height: 80%;
 
-  background-color: bisque;
+  background-color: #0abde3;
 }
 
 .lay .lay__col {
@@ -31,6 +31,25 @@
 
   display: flex;
   flex-direction: row;
+}
 
-  background-color: blue;
+.lay .lay__col .lay__col1 {
+  width: 200px;
+  height: 100%;
+
+  background-color: #54a0ff;
+}
+
+.lay .lay__col .lay__col2 {
+  width: 1100px;
+  height: 100%;
+
+  background-color: #70a1ff;
+}
+
+.lay .lay__col .lay__col3 {
+  width: 200px;
+  height: 100%;
+
+  background-color: #2e86de;
 }
